<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/books"
    android:orientation="vertical"
    tools:context=".MainActivityStart">

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/collage"
        android:background="@drawable/custom_button"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:layout_marginTop="160dp"
        android:layout_marginStart="90dp"
        android:gravity="center"
        />
    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/highschool"
        android:background="@drawable/custom_button"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:layout_marginTop="90dp"
        android:layout_marginStart="90dp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/middleschool"
        android:background="@drawable/custom_button"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:layout_marginTop="90dp"
        android:layout_marginStart="90dp"
        android:gravity="center"
        />




</LinearLayout>